# sbmgr

./: .gitignore  123.crt  123.crt.sig  Cargo.toml  README.md
secure_boot_artifacts/: pk-cert.pem  pk-private.pem  pk-public.pem  pk.auth  pk.esl
src/: backend.rs  lib.rs  main.rs
src/backend/: auth_creator.rs  backend.rs  boot_handler.rs  cert_to_esl.rs  commands.rs  dispatcher.rs  esl_creator.rs  esl_to_auth.rs  guids.rs  mod.rs  os.rs  secret_creator.rs  shim.rs  storage_handler.rs  var_creator.rs  var_parser.rs  var_reader.rs  var_writer.rs
src/demo/: change_boot_order.rs  file_gen.rs  mod.rs  read_boot_order.rs  read_sb_vars.rs  register_custom_bootloader.rs  register_db.rs  var_gen.rs
src/tui/: action.rs  app.rs  event.rs  mod.rs  terminal.rs  ui.rs
tests/: storage_handler_tests.rs
uml/: sbmgr.puml
