[package]
name = "sbmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
efivar = "2.0.0"
hex = "0.4.3"
os_info = "3.14.0"
ratatui = "0.30.0"
regex = "1.12.3"
sysinfo = "0.38.4"
uefi-raw = "0.14.0"
uuid = "1.23.0"
virtfw-libefi = "0.6.1"
x509-parser = "0.18.1"
