[package]
name = "sbmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
directories = "6.0.0"
efivar = "2.0.0"
hex = "0.4.3"
os_info = "3.14.0"
pkcs8 = "0.10.2"
ratatui = "0.30.0"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser", "aws_lc_rs"] }
regex = "1.12.3"
rsa = { version = "0.9.10", features = ["sha2"] }
sha2 = { version = "0.11.0", features = ["oid"] }
sysinfo = "0.38.4"
uefi-raw = "0.14.0"
uuid = "1.23.0"
virtfw-libefi = "0.6.1"
x509-parser = "0.18.1"
